# easy-bluesky

./: .gitignore  CLAUDE.md  README.md  launch.sh  pyproject.toml  requirements.txt
bluesky_app/: __init__.py  config.py  data_browser.py  highlighter.py  live_viewer.py  main.py  styles.py  worker.py
docs/: architecture.md
easy_bluesky/: __init__.py  code_editor.py  config.py  connection_settings.py  data_browser.py  devices_editor.py  devices_plans_tab.py  experiments_tab.py  hdf5_viewer.py  highlighter.py  live_viewer.py  main.py  plan_builder.py  plot_tools.py  queue_manager.py  re_console.py  re_control_bar.py  sim_generator.py  ssh_manager.py  styles.py  themes.py  widgets.py  worker.py
easy_bluesky/scripts/: devices.py  existing_plans_and_devices.yaml  re-manager-real.service  re-manager-sim.service  re_startup_mongo.py  re_startup_sim.py  start_re_managers.sh  stop_re_managers.sh
scripts/: fix_bob_colors.py  kafka_to_epics.py  re_startup_mongo.py  start_services.sh  tiled_adapter.py  zmq_to_kafka.py
tests/: test_worker.py
